# SimpleProgressBar

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml
docs/: CMakeLists.txt  mainpage.md
examples/: CustomizationExample.cpp  SimpleExample.cpp
include/: SimpleProgressBar.hpp
tests/: SimpleProgressBar.test.cpp
